--- a/.github/workflows/gemini-fix.yml
+++ b/.github/workflows/gemini-fix.yml
@@ -29,10 +29,24 @@ jobs:
               "contents": [{
                 "parts": [{
                   "text": "Based on the following GitHub issue, please generate the full, corrected content for the docker-compose.yml file. Only output the raw YAML code and nothing else.\n\nIssue Title: ${{ github.event.issue.title }}\n\nIssue Body: ${{ github.event.issue.body }}"
-                }]
+                }],
+                "safetySettings": [
+                  {
+                    "category": "HARM_CATEGORY_HARASSMENT",
+                    "threshold": "BLOCK_ONLY_HIGH"
+                  },
+                  {
+                    "category": "HARM_CATEGORY_HATE_SPEECH",
+                    "threshold": "BLOCK_ONLY_HIGH"
+                  }
+                ]
               }]
             }' \
             "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${{ secrets.GEMINI_API_KEY }}")
+
+          echo "--- RAW API RESPONSE ---"
+          echo "$API_RESPONSE"
+          echo "------------------------"
 
           # Extract the generated code and save it to a file
           # This part requires some scripting to parse the JSON response from the API
