--- a/.github/workflows/gemini-fix.yml
+++ b/.github/workflows/gemini-fix.yml
@@ -42,7 +42,7 @@ jobs:
                   }
                 ]
             }' \
-            "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.0-pro:generateContent?key=${{ secrets.GEMINI_API_KEY }}")
+            "https://generativelanguage.googleapis.com/v1/models/gemini-1.0-pro:generateContent?key=${{ secrets.GEMINI_API_KEY }}")
 
           echo "--- RAW API RESPONSE ---"
           echo "$API_RESPONSE"
